Index pipeline discovers cross references of methods